--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
         </div>
 
       </section>
+
+      <footer>
+         <p> 2025 OLN Elite Group. Todos os direitos reservados.</p>
+         <p>desenvolvido por Cristian Brito</p>
+      </footer>
     </main>
   </div>
 </body>
