--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <ul class="navbar-itens">
           <li><a href="#">Nossa cidade</a></li>
           <li><a href="#">Atualizações</a></li>
-          <li><a href="#">Loja</a></li>
           <li>
             <a 
               href="https://discord.com/api/oauth2/authorize?client_id=1419003344478929170&redirect_uri=http%3A%2F%2F127.0.0.1%3A5500%2FOLN%2Fcallback.html&response_type=token&scope=identify%20email" 
@@ -71,31 +70,43 @@
       <!-- Título -->
       <div class="main-title">
         <h1>Possibilidades</h1>
+        <h4>(ilustativo)</h4>
       </div>
 
       <!-- Seções -->
       <section class="cidade-container">
-        <div class="sobrenatural-container">
-          <img src="css/assets/soberba.png" alt="" class="universidade">
-          <h2>Sobrenatural</h2>
-          <p>Descrição sobrebrenatural</p>
-        </div>
+  <div class="sobrenatural-container">
+    <img src="css/assets/soberba.png" alt="Sobrenatural" class="card-img">
+    <div class="body-city">
+      <h2>Sobrenatural</h2>
+      <p>Panteõs, cada um representa forças primordiais — vida e morte, ordem e caos, luz e escuridão.
+      Seus ecos ressoam em tempestades, sonhos e presságios, lembrando aos mortais que o destino não lhes pertence por completo.
+      Quando os Panteões despertam, o equilíbrio do mundo é posto à prova.</p>
+    </div>
+  </div>
 
-        <div class="universidade-container">
-          <img src="css/assets/universidade.png" alt="" class="sobrebrenatural">
-          <h2>Universidade</h2>
-          <p>Descrição universidade</p>
-        </div>
+  <div class="universidade-container">
+    <img src="css/assets/universidade.png" alt="Universidade" class="card-img">
+    <div class="body-city">
+      <h2>Universidade</h2>
+      <p>A Universidade Orleans é um tradicional campus americano, repleto de fraternidades, clubes e rivalidades estudantis.
+        À primeira vista, um lugar de aprendizado e convivência...
+        <br>
+      <em>Mas essa universidade pode esconder algo sombrio.</em></p>
+    </div>
+  </div>
 
-        <div class="paranormal-container">
-          <img src="css/assets/Banner Lighting.png" alt="" class="paranormal">
-          <h2>Paranormal</h2>
-          <p>Descrição Paranormal</p>  
-        </div>
-      </section>
+  <div class="paranormal-container">
+    <img src="css/assets/Banner Lighting.png" alt="Paranormal" class="card-img">
+    <div class="body-city">
+      <h2>Paranormal</h2>
+      <p>Em Orleans, esqueletos surgem, sussurros ecoam e pessoas desaparecem — sinais de que algo paranormal habita a cidade.</p>
+    </div>
+  </div>
+</section>
 
       <section class="patch">
-        <h2>Atualizações</h2>
+        <h2>Atualizações (ilustrativo)</h2>
         <div class="patch-container">
           <img src="css/assets/patch.jpg" alt="">
           <p> A atualização Money Fronts do GTA Online traz uma nova dinâmica de lavagem de dinheiro, onde os jogadores 
