--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Styles.css">
 
   <!-- Ícones Font Awesome -->
   <link 
@@ -25,7 +25,7 @@
     <div class="navbar-container">
       <nav>
         <a href="#">
-          <img class="logo" src="css/assets/OLN.png" alt="OLN Elite">
+          <img class="logo" src="assets/OLN.png" alt="OLN Elite">
         </a>
         <ul class="navbar-itens">
           <li><a href="#">Nossa cidade</a></li>
@@ -76,7 +76,7 @@
       <!-- Seções -->
       <section class="cidade-container">
   <div class="sobrenatural-container">
-    <img src="css/assets/soberba.png" alt="Sobrenatural" class="card-img">
+    <img src="assets/soberba.png" alt="Sobrenatural" class="card-img">
     <div class="body-city">
       <h2>Sobrenatural</h2>
       <p>Panteõs, cada um representa forças primordiais — vida e morte, ordem e caos, luz e escuridão.
@@ -86,7 +86,7 @@
   </div>
 
   <div class="universidade-container">
-    <img src="css/assets/universidade.png" alt="Universidade" class="card-img">
+    <img src="assets/universidade.png" alt="Universidade" class="card-img">
     <div class="body-city">
       <h2>Universidade</h2>
       <p>A Universidade Orleans é um tradicional campus americano, repleto de fraternidades, clubes e rivalidades estudantis.
@@ -97,7 +97,7 @@
   </div>
 
   <div class="paranormal-container">
-    <img src="css/assets/Banner Lighting.png" alt="Paranormal" class="card-img">
+    <img src="assets/Banner Lighting.png" alt="Paranormal" class="card-img">
     <div class="body-city">
       <h2>Paranormal</h2>
       <p>Em Orleans, esqueletos surgem, sussurros ecoam e pessoas desaparecem — sinais de que algo paranormal habita a cidade.</p>
@@ -108,7 +108,7 @@
       <section class="patch">
         <h2>Atualizações (ilustrativo)</h2>
         <div class="patch-container">
-          <img src="css/assets/patch.jpg" alt="">
+          <img src="assets/patch.jpg" alt="">
           <p> A atualização Money Fronts do GTA Online traz uma nova dinâmica de lavagem de dinheiro, onde os jogadores 
             podem adquirir negócios locais icônicos e usá-los como fachadas para canalizar lucros ilícitos. Com a ajuda de Martin Madrazo e Raf De Angelis, os 
             jogadores podem conectar sua rede criminosa a novos consultores e aumentar os ganhos dos seus negócios ilegais. A atualização também introduz um novo sistema de lavagem de dinheiro, 
@@ -125,3 +125,4 @@
   </div>
 </body>
 </html>
+
